# DiseasePrediction

./: README.md  eval.py  main.py  pyproject.toml  rerun_rf4.sh  run_spark_sweep.sh  serial_baseline (1).py  serial_timing_results (1).txt  spark_inference.py  spark_sweep_20260426_194753.txt  spark_sweep_20260426_194815.txt  spark_sweep_20260426_195548.txt  train.sh
hadoop/: baseline_sequential.py  compare_results.py  install_deps.sh  mapper.py  reducer.py  run_inference.sh  setup_hdfs.sh
hadoop/benchmark/: benchmark_all.sh  serial_baseline.py
hadoop/knn/: mapper.py  run.sh
hadoop/logistic_regression/: mapper.py  run.sh
hadoop/random_forest/: mapper.py  run.sh
hadoop/xgboost/: mapper.py  run.sh
logs/: 3261980_train.err  3261985_train.err  3261985_train.out
models/: Logistic_Regression.pkl
